Bug Squashing and more mobile responsiveness
Fixed overflow on mobile. Added more responsiveness for smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
 .bg-container {
-    width: 100%;
-    background-color: #262524;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  background-color: #262524;
+  display: flex;
+  justify-content: center;
 }
 
 .gradient-container {
-    background-image: linear-gradient(135deg, rgba(60,34,75,1) 0%, rgba(0,0,0,1) 100%);
-    background-size: cover;
-    background-position: center;
-    background-attachment: scroll;
-    width: 91.666667%;
-  }
+  background-image: linear-gradient(
+    135deg,
+    rgba(60, 34, 75, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  background-size: cover;
+  background-position: center;
+  background-attachment: scroll;
+  width: 91.666667%;
+}
+
+.wrapper {
+    overflow-x: hidden;
+    position: relative;
+}
