--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -75,15 +75,13 @@ svg:hover > g {
   border-bottom: 1px solid rgb(121, 233, 121);
   padding: 30px 0;
   text-align: center;
+  font-weight: bold;
 }
 
 .menu li:last-child {
   border-bottom: none;
 }
 
-.menu li:first-child a {
-  font-weight: bold;
-}
 
 .menu li a {
   color: snow;
